# piola

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  install.ps1  install.sh  release-plz.toml
.github/: dependabot.yml  piola.tape  pull_request_template.md  wn.tape
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-plz.yml
crates/piola/: CHANGELOG.md  Cargo.toml
crates/piola-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/piola-cli/src/: main.rs  updater.rs
crates/piola/src/: error.rs  lib.rs
crates/piola/src/ast/: mod.rs
crates/piola/src/interpreter/: env.rs  error.rs  mod.rs  value.rs
crates/piola/src/lexer/: mod.rs  token.rs
crates/piola/src/parser/: mod.rs
crates/piola/src/parser/snapshots/: piola__parser__tests__ast_snapshot_declaracion_duro.snap  piola__parser__tests__ast_snapshot_declaracion_wea.snap
crates/piola/tests/: interpreter_runtime.rs
crates/piola/tests/common/: mod.rs
crates/piola/tests/snapshots/: interpreter_runtime__duro_reasignacion_directa_lanza_error.snap  interpreter_runtime__duro_valor_no_cambia_tras_intento_fallido.snap  interpreter_runtime__variable_no_definida_da_error_correcto.snap  interpreter_runtime__wea_puede_cambiar_de_tipo.snap
crates/wn/: Cargo.toml
crates/wn-cli/: Cargo.toml  build.rs
crates/wn-cli/src/: main.rs  updater.rs
crates/wn/src/: error.rs
crates/wn/src/interpreter/: error.rs  mod.rs  value.rs
crates/wn/src/lexer/: mod.rs  token.rs
crates/wn/src/parser/: mod.rs
crates/wn/src/parser/snapshots/: wn__parser__tests__ast_snapshot_declaracion_duro.snap  wn__parser__tests__ast_snapshot_declaracion_wea.snap
crates/wn/tests/: interpreter_runtime.rs
crates/wn/tests/common/: mod.rs
crates/wn/tests/snapshots/: interpreter_runtime__duro_redeclarado_lanza_error.snap  interpreter_runtime__duro_valor_no_cambia_tras_intento_fallido.snap  interpreter_runtime__numero_convierte_textos_y_numeros_validos.snap  interpreter_runtime__numero_error_es_capturable_con_ojo_y_cago.snap  interpreter_runtime__numero_funciona_con_pregunta.snap  interpreter_runtime__numero_rechaza_aridad_invalida_muchos_args.snap  interpreter_runtime__numero_rechaza_aridad_invalida_sin_args.snap  interpreter_runtime__numero_rechaza_formatos_no_soportados.snap  interpreter_runtime__numero_rechaza_texto_no_convertible.snap  interpreter_runtime__numero_rechaza_texto_vacio_nan_e_infinity.snap  interpreter_runtime__numero_rechaza_tipos_no_convertibles.snap  interpreter_runtime__texto_convierte_cualquier_valor.snap  interpreter_runtime__texto_rechaza_aridad_invalida_muchos_args.snap  interpreter_runtime__texto_rechaza_aridad_invalida_sin_args.snap  interpreter_runtime__variable_no_definida_da_error_correcto.snap  interpreter_runtime__wea_puede_cambiar_de_tipo.snap
docs/: astro.config.mjs  features.md  package.json  pnpm-lock.yaml
docs/src/content/docs/: filosofia.mdx  index.mdx  instalacion.mdx  roadmap.mdx
docs/src/content/docs/lenguaje/: control-flujo.mdx  errores.mdx  funciones.mdx  tipos.mdx  variables.mdx
docs/src/grammars/: piola.tmLanguage.json  wn.tmLanguage.json
docs/src/styles/: custom.css
examples/: features.cl  fibonacci.cl
scripts/: release.ps1  release.sh
