[workspace]
resolver = "2"
members = [
    "crates/wn",
    "crates/wn-cli",
]

[profile.dev]
opt-level = 0      # no optimization, fast compile
debug = true       # full debug symbols

[profile.release]
opt-level = 3      # full optimization
lto = "thin"       # link-time optimization (faster than "fat", still good)
codegen-units = 1  # single codegen unit — slower compile, better optimization
strip = "symbols"  # remove debug symbols from binary

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
