[package]
name = "piola"
version = "0.1.0"
edition = "2024"
description = "CLI and REPL for the Piola programming language"
repository = "https://github.com/cuervolu/piola"
license = "MIT"
keywords = ["piola", "language", "interpreter", "cli", "chile"]

[[bin]]
name = "piola"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
rustyline = "18"
self_update = { version = "0.44", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
] }
piola = { path = "../piola", package = "piola-core" }
