[package]
name = "wn-cli"
version = "0.1.0"
edition = "2024"
description = "CLI and REPL for the WN++ programming language"
repository = "https://github.com/cuervolu/wn"
license = "MIT"
keywords = ["wn", "language", "interpreter", "cli", "chile"]

[[bin]]
name = "wn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
rustyline = "18"
self_update = { version = "0.44", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
wn = { path = "../wn" }
