[package]
name = "wn-cli"
version.workspace = true
edition.workspace = true
description = "CLI y REPL para el intérprete de lenguaje de programación WN++"
repository.workspace = true
license.workspace = true
keywords = ["wn", "language", "interpreter", "cli", "chile"]

[[bin]]
name = "wn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
rustyline = "18"
self_update = { version = "0.44", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
owo-colors = "4"
dialoguer = "0.12"
self-replace = "1"
wn = { path = "../wn" }
